--- a/src/components/DreamStartTestPopup.css
+++ b/src/components/DreamStartTestPopup.css
@@ -1,64 +1,121 @@
-.choose-your-dream, .select-a-company {
+.answer-the-following, .some-more-questions {
     position: relative;
     letter-spacing: -0.02em;
-    line-height: 2.78vw
+    line-height: 2.78vw;
+    font-weight: bold
     }
-.select-a-company {
+.answer-the-following {
     font-size: var(--font-size-lg);
     color: var(--icon-grey);
-    margin-top: -0.53vw
+    margin-top: -0.53vw;
+    font-weight: normal
     }
-.choose-your-dream-company-parent {
+.some-more-questions-parent {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start
     }
-.company-logo-icon30 {
+.language {
+    position: relative
+    }
+.frame-select {
+    border-radius: var(--br-xs);
+    border: 0.07vw solid var(--color-gainsboro-400);
+    box-sizing: border-box;
+    width: 20.11vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: var(--padding-base) var(--padding-5xl)
+    }
+.frame-child177, .language-parent {
+    display: flex;
+    justify-content: flex-start
+    }
+.language-parent {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: var(--gap-xs)
+    }
+.frame-child177 {
+    border: 0.07vw solid var(--color-gainsboro-400);
+    font-family: var(--font-avenir-lt-std);
+    font-size: var(--font-size-xl);
+    background-color: transparent;
+    border-radius: var(--br-xs);
+    box-sizing: border-box;
+    width: 20.11vw;
+    flex-direction: row;
+    align-items: center;
+    padding: var(--padding-base) var(--padding-5xl)
+    }
+.frame-parent242, .frame-parent243, .frame-parent244 {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start
+    }
+.frame-parent244 {
+    flex-direction: row;
+    gap: var(--gap-xs)
+    }
+.frame-parent242, .frame-parent243 {
+    flex-direction: column
+    }
+.frame-parent243 {
+    gap: var(--gap-17xl);
+    font-size: var(--font-size-lg)
+    }
+.frame-parent242 {
+    gap: var(--gap-5xl)
+    }
+.start-test {
     position: relative;
-    width: 5.29vw;
-    height: 2.31vw;
+    font-size: var(--font-size-xl);
+    font-family: var(--font-avenir-lt-std);
+    color: var(--white);
+    text-align: left;
+    font-weight: bold
+    }
+.solarplay-bold-icon5 {
+    position: relative;
+    width: 1.06vw;
+    height: 1.06vw;
     overflow: hidden;
     flex-shrink: 0
     }
-.company-logo-wrapper1 {
-    cursor: pointer;
-    border: 0;
-    padding: var(--padding-16xl) var(--padding-19xl);
-    background-color: var(--white);
-    border-radius: var(--br-base);
-    box-shadow: -0.13vw 0 0 rgba(0, 0, 0, 0.1), 0.13vw -0.1vw 0 rgba(0, 0, 0, 0.1), 0 0.2vw 0 #605bff;
-    width: 11.77vw;
-    height: 6.94vw;
+.start-test-parent {
+    border-radius: var(--br-5xs);
+    background-color: var(--color-mediumseagreen);
     overflow: hidden;
-    flex-shrink: 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    box-sizing: border-box
+    padding: var(--padding-base) var(--padding-xl);
+    gap: var(--gap-3xs)
     }
-.dreamstarttestpopup-inner, .frame-parent238, .frame-parent239 {
+.frame-parent241, .frame-wrapper92 {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start
     }
-.frame-parent239 {
-    flex-direction: row;
-    gap: var(--gap-5xl)
+.frame-wrapper92 {
+    cursor: pointer;
+    border: 0;
+    padding: 0;
+    background-color: transparent;
+    flex-direction: row
     }
-.dreamstarttestpopup-inner, .frame-parent238 {
-    flex-direction: column
-    }
-.frame-parent238 {
-    gap: var(--gap-5xl)
-    }
-.dreamstarttestpopup-inner {
+.frame-parent241 {
     position: absolute;
-    top: calc(50% - 11.01vw);
-    left: calc(50% - 19.25vw)
+    top: 2.38vw;
+    left: calc(50% - 20.5vw);
+    flex-direction: column;
+    gap: var(--gap-5xl)
     }
-.vector-icon38 {
+.vector-icon39 {
     position: absolute;
     height: 34%;
     width: 34.01%;
@@ -70,23 +127,23 @@
     overflow: hidden;
     max-height: 100%
     }
-.basilcross-outline15 {
+.basilcross-outline16 {
     cursor: pointer;
     border: 0;
     padding: 0;
     background-color: transparent;
     position: absolute;
-    top: 1.85vw;
-    left: 39.35vw;
+    top: 2.12vw;
+    left: 40.34vw;
     width: 2.12vw;
     height: 2.12vw;
     overflow: hidden
     }
-.dreamstarttestpopup {
+.dreamstarttest2popup {
     border-radius: var(--br-base);
     background-color: var(--white);
-    width: 43.65vw;
-    height: 27.45vw;
+    width: 44.31vw;
+    height: 33.47vw;
     overflow: hidden;
     max-width: 100%;
     max-height: 100%;
@@ -98,7 +155,4 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%)
-    }
-.choose-your-dream {
-    font-weight: bold
     }
