--- a/src/pages/AddDreamCompany.css
+++ b/src/pages/AddDreamCompany.css
@@ -1,102 +1,130 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .hero {
-    display: flex;
-    height: 100vh;
-    position: relative;
-    overflow: hidden;
-    /* background-color: black; */
-    background-size: cover;
-    background-position: center center;
-    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.5);
-    transition: background 1s ease;
-  }
-  
-  .content {
-    /* border: 1px purple solid; */
-    display: flex;
-    flex-direction: column;
-    max-width: 1200px;
-    width: 100%;
-    color: white;
-    margin-inline: auto;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .content h1 {
-    font-size: 56px;
-    font-weight: bolder;
-  }
-  
-  .content p {
-    font-size: 22px;
-    margin: 15px 0;
-    max-width: 550px;
-    letter-spacing: 2px;
-  }
-  
-  .content a {
-    color: inherit;
-    text-decoration: none;
-    background-color: purple;
-    padding: 12px 24px;
-    font-size: 22px;
-    border-radius: 10px;
-  }
-  .header {
-    font-size: 4vw;
-    color: black;
-    background: #fff;
-    mix-blend-mode: screen;
-    padding: 1px 4px;
-    margin-top: 1vw;
-    margin-bottom: 10vw;
-    border-radius: 10px;
-    /* Add transition for smooth background change */
-  }
-  .back-arrow {
-    width: 4vw; /* Adjust the width to match the desired size */
-    height: 4vw; /* Adjust the height to match the desired size */
-    margin-top: 1vw;
-    margin-bottom:-0.5vw;
-    transform: rotate(180deg); /* Add margin to create spacing between the arrow and text */
-  }
-  .forward-arrow {
-    width: 4vw; /* Adjust the width to match the desired size */
-    height: 4vw; /* Adjust the height to match the desired size */
-    margin-top: 1vw;
-    margin-bottom:-0.6vw;
-    /* Add margin to create spacing between the arrow and text */
-  }
-  .back-button,
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Avenir LT Std';
+  src: url('/src/fonts/Avenir LT Std 65 Medium.otf') format('opentype');
+  font-weight: normal;
+}
+.top-header-container {
+  height: 6vw;
+  width: 100%;
+  text-align: center;
+  background: #000000;
+  color: white;
+}
+.top-header {
+  position: absolute;
+  justify-content: center;
+  width: 100%;
+  padding-bottom: 20px;
+  /* margin-left: 35vw; */
+  background-color: #f5f6fa;
+}
+.hero {
+  display: flex;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+  /* background-color: rgb(255, 255, 255); */
+  /* background-size: cover;
+  background-position: center center; */
+  /* box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.5); */
+
+  /* transition: background 1s ease; */
+}
+
+.content {
+  /* border: 1px purple solid; */
+  display: flex;
+  flex-direction: column;
+  max-width: 1200px;
+  width: 100%;
+  color: white;
+  margin-inline: auto;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.content h1 {
+  font-size: 56px;
+  font-weight: bolder;
+}
+
+.content p {
+  font-size: 22px;
+  margin: 15px 0;
+  max-width: 550px;
+  letter-spacing: 2px;
+}
+
+.content a {
+  color: inherit;
+  text-decoration: none;
+  background-color: #605bff;
+  padding: 12px 24px;
+  font-size: 22px;
+  border-radius: 10px;
+}
+.header {
+  font-size: 3vw;
+  color: rgb(49, 46, 46);
+  /* background: #040404; */
+  /* mix-blend-mode: screen; */
+  padding: 1px 4px;
+  margin-top: 1vw;
+  /* margin-bottom: 1vw; */
+  border-radius: 10px;
+  /* Add transition for smooth background change */
+}
+.back-arrow {
+  width: 4vw; /* Adjust the width to match the desired size */
+  height: 4vw; /* Adjust the height to match the desired size */
+  margin-top: 1vw;
+  margin-bottom: -0.5vw;
+  transform: rotate(
+    180deg
+  ); /* Add margin to create spacing between the arrow and text */
+}
+.forward-arrow {
+  width: 4vw; /* Adjust the width to match the desired size */
+  height: 4vw; /* Adjust the height to match the desired size */
+  margin-top: 1vw;
+  margin-bottom: -0.6vw;
+  /* Add margin to create spacing between the arrow and text */
+}
+.back-button,
 .forward-button {
+  position: absolute;
   border: none;
-  background: none;
+  background: transparent;
   padding: 0;
 }
 .suggestion-item {
+  width: 35vw;
+  margin: 5px;
+  margin-right: 8vw;
   font-size: 14px;
   display: block;
-  padding-left:-50px;
-   /* Adjust the font size as needed */
+  padding-left: -50px;
+  /* Adjust the font size as needed */
 }
 .suggestion-item {
   display: block;
   padding: 10px;
   background-color: transparent;
-  color: #fff;
+  color: #000000;
+  background-color: aliceblue;
   cursor: pointer;
   list-style: none;
   border-radius: 0.5vw;
 }
 
 .suggestion-item:hover {
-  background-color: #a8aab4;
+  background-color: gray;
+}
+
+.nextBox {
+  margin-top: 2vw;
 }
