--- a/src/components/AdminHeader.css
+++ b/src/components/AdminHeader.css
@@ -109,13 +109,21 @@
     width: 2.38vw;
     height: 2.38vw
     }
-.claritynotification-line-parent2, .frame-parent284, .frame-parent285 {
+ .frame-parent284, .frame-parent285 {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    gap: var(--gap-xl)
+    gap: var(--gap-xl);
     }
+.claritynotification-line-parent2{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    gap: var(--gap-xl);
+    margin-left: 20vw;
+}
 .frame-parent284, .frame-parent285 {
     gap: var(--gap-13xl);
     color: var(--icon-grey)
