--- a/src/pages/TestScreenObjective.css
+++ b/src/pages/TestScreenObjective.css
@@ -6,19 +6,23 @@
     font-family: var(--font-avenir-lt-std);
     color: var(--black);
     text-align: left
-    }
-.help, .statement-wrapper {
+}
+
+.help,
+.statement-wrapper {
     cursor: pointer;
     border: 0;
     padding: 0;
     background-color: transparent
-    }
+}
+
 .statement-wrapper {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start
-    }
+}
+
 .help {
     position: relative;
     font-size: var(--font-size-5xl);
@@ -28,7 +32,8 @@
     color: var(--black);
     text-align: left;
     display: inline-block
-    }
+}
+
 .frame-parent247 {
     position: absolute;
     top: 1.59vw;
@@ -38,12 +43,14 @@
     align-items: flex-start;
     justify-content: flex-start;
     gap: var(--gap-20xl)
-    }
+}
+
 .multiple-choice-questions {
     position: relative;
     letter-spacing: -0.02em;
     line-height: 2.78vw
-    }
+}
+
 .ellipse-input {
     cursor: pointer;
     position: relative;
@@ -52,16 +59,20 @@
     box-sizing: border-box;
     width: 1.32vw;
     height: 1.32vw
-    }
-.ellipse-parent5, .frame-wrapper93 {
+}
+
+.ellipse-parent5,
+.frame-wrapper93 {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start
-    }
+}
+
 .ellipse-parent5 {
     gap: var(--gap-xl)
-    }
+}
+
 .frame-wrapper93 {
     border-radius: var(--br-xs);
     background-color: var(--white);
@@ -70,32 +81,41 @@
     width: 34.46vw;
     overflow: hidden;
     padding: var(--padding-mini) var(--padding-13xl)
-    }
-.frame-parent249, .multiple-choice-questions-parent, .q1-select-one-of-the-options-parent {
+}
+
+.frame-parent249,
+.multiple-choice-questions-parent,
+.q1-select-one-of-the-options-parent {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
     gap: var(--gap-xl)
-    }
-.multiple-choice-questions-parent, .q1-select-one-of-the-options-parent {
+}
+
+.multiple-choice-questions-parent,
+.q1-select-one-of-the-options-parent {
     gap: var(--gap-9xl)
-    }
+}
+
 .q1-select-one-of-the-options-parent {
     font-size: var(--font-size-xl)
-    }
+}
+
 .multiple-choice-questions-parent {
     position: absolute;
     top: 2.38vw;
     left: 2.38vw
-    }
+}
+
 .submit {
     position: relative;
     font-size: var(--font-size-lg);
     font-family: var(--font-avenir-lt-std);
     color: var(--white);
     text-align: left
-    }
+}
+
 .submit-wrapper {
     cursor: pointer;
     border: 0.07vw solid var(--purple);
@@ -111,14 +131,16 @@
     flex-direction: row;
     align-items: center;
     justify-content: center
-    }
+}
+
 .next {
     position: relative;
     font-size: var(--font-size-lg);
     font-family: var(--font-avenir-lt-std);
     color: var(--purple);
     text-align: left
-    }
+}
+
 .next-wrapper {
     cursor: pointer;
     border: 0.07vw solid var(--purple);
@@ -134,23 +156,26 @@
     flex-direction: row;
     align-items: center;
     justify-content: center
-    }
+}
+
 .frame-parent250 {
     position: absolute;
-    top: 48.68vw;
+    top: 42.68vw;
     left: calc(50% - 23.02vw);
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
     gap: var(--gap-base)
-    }
+}
+
 .div186 {
     position: relative;
     letter-spacing: -0.02em;
     line-height: 2.78vw;
     color: var(--color-tomato)
-    }
+}
+
 .time-remaining-parent {
     position: absolute;
     top: 2.38vw;
@@ -161,7 +186,8 @@
     justify-content: flex-start;
     gap: var(--gap-xs);
     font-size: var(--font-size-5xl)
-    }
+}
+
 .frame-parent248 {
     position: absolute;
     top: 0;
@@ -171,15 +197,23 @@
     width: 50.66vw;
     height: 53.7vw;
     overflow: hidden
-    }
+}
+
 .q1-problem-statement {
     position: absolute;
     top: 7.8vw;
-    left: 2.38vw;
+    left: -0.8vw;
     font-size: var(--font-size-5xl);
     letter-spacing: -0.02em;
-    line-height: 2.78vw
-    }
+    line-height: 2.78vw;
+    width: 40vw;
+    height:40vw;
+
+    
+    
+    
+}
+
 .frame-parent246 {
     position: absolute;
     top: 9.39vw;
@@ -189,67 +223,81 @@
     width: 96.3vw;
     height: 53.7vw;
     overflow: hidden
-    }
+}
+
 .test-screen-objective-child {
     position: absolute;
     top: 14.62vw;
     left: 1.79vw;
     width: 45.7vw;
     height: 0.2vw
-    }
-.hi-priyanshu, .welcome-to-fulcrum {
+}
+
+.hi-priyanshu,
+.welcome-to-fulcrum {
     position: relative;
     letter-spacing: -0.02em;
     line-height: 1.59vw
-    }
+}
+
 .welcome-to-fulcrum {
     font-size: var(--font-size-15xl);
     line-height: 2.78vw;
     color: var(--black)
-    }
-.frame-wrapper97, .hi-priyanshu-parent {
+}
+
+.frame-wrapper97,
+.hi-priyanshu-parent {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start
-    }
+}
+
 .frame-wrapper97 {
     width: 21.56vw;
     flex-direction: row;
     align-items: center
-    }
+}
+
 .oouinext-ltr-icon2 {
     position: relative;
     width: 1.06vw;
     height: 1.06vw;
     overflow: hidden;
     flex-shrink: 0
-    }
+}
+
 .oouinext-ltr-group {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
     gap: var(--gap-5xs)
-    }
-.frame-child183, .frame-child184 {
+}
+
+.frame-child183,
+.frame-child184 {
     position: relative;
     background-color: var(--color-slateblue);
     width: 4.63vw;
     height: 0.53vw;
     overflow: hidden;
     flex-shrink: 0
-    }
+}
+
 .frame-child184 {
     background-color: var(--color-gainsboro-100)
-    }
+}
+
 .frame-parent253 {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
     gap: var(--gap-5xs)
-    }
+}
+
 .next-problem {
     position: relative;
     font-size: var(--font-size-xl);
@@ -258,25 +306,35 @@
     font-family: var(--font-avenir-lt-std);
     color: var(--purple);
     text-align: left
-    }
-.frame-parent251, .frame-parent252, .next-problem-parent {
+}
+
+.frame-parent251,
+.frame-parent252,
+.next-problem-parent {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start
-    }
+}
+.frame-parent252{
+    left:-2vw;
+}
+
 .next-problem-parent {
     cursor: pointer;
     border: 0;
     padding: 0;
     background-color: transparent;
     gap: var(--gap-5xs)
-    }
-.frame-parent251, .frame-parent252 {
+}
+
+.frame-parent251,
+.frame-parent252 {
     gap: var(--gap-xl);
     font-size: var(--font-size-xl);
     color: var(--icon-grey)
-    }
+}
+
 .frame-parent251 {
     position: absolute;
     top: 2.91vw;
@@ -284,15 +342,51 @@
     gap: var(--gap-307xl);
     font-size: var(--font-size-base);
     color: var(--color-darkslategray-200)
-    }
+}
+
 .test-screen-objective {
     position: relative;
     background-color: var(--color-ghostwhite-100);
     width: 100%;
-    height: 64.95vw;
+    height: 57.95vw;
     overflow: hidden;
     text-align: left;
     font-size: var(--font-size-9xl);
     color: var(--black);
     font-family: var(--font-avenir-lt-std)
-    }
+}
+
+.tab-button {
+    border: none;
+}
+
+.tab-button.active {
+    border: none;
+}
+
+.tab-button {
+    border: none;
+    padding-bottom: 5px;
+    /* Add some space for the underline */
+    margin-right: 10px;
+    width: 7vw;
+    background-color: transparent;
+    /* Add some spacing between tabs */
+}
+
+.tab-button.active {
+    border-bottom: 2px solid blue;
+    /* Add an underline to the active tab */
+}
+.progress-bar {
+    width: 30px;
+    height: 10px;
+    background-color: grey;
+    margin-right: 10px;
+  }
+  
+  .progress-bar.active {
+    background-color: blue;
+  }
+
+
