--- a/src/pages/TestScreenCode/TestScreenCode.css
+++ b/src/pages/TestScreenCode/TestScreenCode.css
@@ -34,7 +34,12 @@
     justify-content: space-between
     }
 .frame-child189 {
-    justify-content: flex-start
+    justify-content: flex-start;
+    border-radius: 0.5vw;
+    width: 6.94vw;
+    height:2.5vw;
+    border-color: #605BFF;
+    background-color: #548EFF1A;
     }
 .vector-icon40 {
     position: absolute;
