--- a/src/pages/TestScreenObjective/TestScreenObjective.css
+++ b/src/pages/TestScreenObjective/TestScreenObjective.css
@@ -49,6 +49,15 @@
     position: relative;
     letter-spacing: -0.02em;
     line-height: 2.78vw;
+   
+}
+.multiple-choice-questions1 {
+    position: relative;
+    letter-spacing: -0.02em;
+    line-height: 2.78vw;
+    color:var(--purple);
+    cursor: pointer;
+   
 }
 
 .ellipse-input {
@@ -265,7 +274,8 @@
     width: 1.06vw;
     height: 1.06vw;
     overflow: hidden;
-    flex-shrink: 0
+    flex-shrink: 0;
+   
 }
 
 .oouinext-ltr-group {
