--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,7 +6,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 10%;
-  background-color: #f3f3f3; /* Your preferred color */
+  background-color: var(--color-lavender); /* Your preferred color */
 }
 
 footer a,
