--- a/src/pages/AddDreamCompany/AddDreamCompany.css
+++ b/src/pages/AddDreamCompany/AddDreamCompany.css
@@ -13,7 +13,7 @@
 .top-header {
   position: absolute;
   width: 100%;
-  background-color: #f5f6fa;
+  background-color: var(--color-lavender);
   height: 10%;
   text-align: center;
 }
