--- a/src/pages/AddDreamCompany/AddDreamCompany.css
+++ b/src/pages/AddDreamCompany/AddDreamCompany.css
@@ -34,3 +34,11 @@
   margin-bottom: 5vh;
   color: rgb(49, 46, 46);
 }
+
+.searchBarContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
