--- a/src/pages/TestScreenObjective/TestScreenObjective.css
+++ b/src/pages/TestScreenObjective/TestScreenObjective.css
@@ -37,7 +37,7 @@
 
 .frame-parent247 {
     position: absolute;
-    top: 0vw;
+    top: 1vw;
     left: 1.7vw;
     display: flex;
     flex-direction: row;
@@ -50,6 +50,13 @@
     position: relative;
     letter-spacing: -0.02em;
     line-height: 2.78vw;
+   top:1vw;
+}
+.questions1{
+    position: relative;
+    letter-spacing: -0.02em;
+    line-height: 2.78vw;
+    
    
 }
 .multiple-choice-questions1 {
@@ -76,7 +83,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start
+    justify-content: flex-start;
+
 }
 
 .ellipse-parent5 {
@@ -90,7 +98,8 @@
     box-sizing: border-box;
     width: 45.46vw;
     overflow: hidden;
-    padding: var(--padding-mini) var(--padding-13xl)
+    padding: var(--padding-mini) var(--padding-13xl);
+   
 }
 
 .frame-parent249,
@@ -100,8 +109,11 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: var(--gap-xl)
+    gap: var(--gap-xl);
+    margin-top:0.3vw;
 }
+
+
 
 .multiple-choice-questions-parent,
 .q1-select-one-of-the-options-parent {
@@ -183,6 +195,7 @@
     position: relative;
     letter-spacing: -0.02em;
     line-height: 2.78vw;
+   top:1vw;
     color: var(--color-tomato)
 }
 
@@ -407,6 +420,7 @@
 .left-wrapper{
     width:40vw;
     margin-left:48vw;
+   
 }
 
 
