--- a/src/pages/AddDreamCompany/AddDreamCompany.css
+++ b/src/pages/AddDreamCompany/AddDreamCompany.css
@@ -77,4 +77,9 @@
   border-radius: 0.5vw;
   margin-left: -35vw;
 }
-
+.job-profile-group{
+  width:30vw;
+  height:4vw;
+  border-radius: 0.5vw;
+  margin-left: -30vw;
+}
