--- a/src/pages/AddDreamCompany/AddDreamCompany.css
+++ b/src/pages/AddDreamCompany/AddDreamCompany.css
@@ -77,7 +77,7 @@
   border-radius: 0.5vw;
   margin-left: -35vw;
 }
-.job-profile-group{
+.job-profile-group1{
   width:30vw;
   height:4vw;
   border-radius: 0.5vw;
