--- a/src/pages/DashboardInterviewer2/DashboardInterviewer2.css
+++ b/src/pages/DashboardInterviewer2/DashboardInterviewer2.css
@@ -213,3 +213,16 @@
     color: var(--color-darkslategray-200);
     font-family: var(--font-avenir-lt-std)
     }
+
+    .submit-button{
+        background-color: var(--purple);
+        border-radius: var(--br-5xs);
+        gap: var(--gap-7xs);
+        padding: var(--padding-xs) var(--padding-5xl);
+        cursor: pointer;
+        border: 0;
+        color: white;
+        font-size: medium;
+        margin-left : 80px;
+    }
+    
